<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.ali_razavi.lovelymovies.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_item_mPoster"
                android:layout_width="185dp"
                android:layout_height="277dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingTop="8dp">

                <TextView
                    style="@style/dtextViewTitles"
                    android:text="@string/movieRate" />

                <TextView
                    android:id="@+id/detail_item_mRate"
                    style="@style/dtextViewValues" />

                <TextView
                    style="@style/dtextViewTitles"
                    android:text="@string/moviePopularity" />

                <TextView
                    android:id="@+id/detail_item_mPopularity"
                    style="@style/dtextViewValues" />

                <TextView
                    style="@style/dtextViewTitles"
                    android:text="@string/movieReleaseDate" />

                <TextView
                    android:id="@+id/detail_item_mReleaseDate"
                    style="@style/dtextViewValues" />

                <TextView
                    style="@style/dtextViewTitles"
                    android:text="@string/movieLanguage" />

                <TextView
                    android:id="@+id/detail_item_mLanguage"
                    style="@style/dtextViewValues"
                    android:textAllCaps="true" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/dtextViewTitles"
                    android:text="@string/movieTitle" />

                <TextView
                    android:id="@+id/detail_item_mTitle"
                    style="@style/dmovieTitleName" />

                <TextView
                    style="@style/dtextViewTitles"
                    android:text="@string/movieOverview" />

                <TextView
                    android:id="@+id/detail_item_mOverview"
                    style="@style/dmovieOverview" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</ScrollView>
